# me700-hw2

./: README.md  assignment_2_genAIuse.txt  pyproject.toml
.github/workflows/: tests.yml
src/: beam debug.py  beam testing.ipynb  beam.py  math_util debug.py  mesh testing.ipynb  mesh.py  random_utils.py
tests/: beam debug.py  beam test debug.py  functions_for_pytest.py  test_beam.py
tutorial/: problem set 1.ipynb  tutorial.ipynb  tutorial.py
