[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "me700-hw2"
version = "0.0.0"
authors = [
  { name="Ryan Engle", email="rtengle@bu.edu" },
]
description = "me700-hw2 workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent :: MIT License"
]
dependencies = [
    "numpy==2.2.3",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "matplotlib==3.10.0",
    "networkx[default]==3.4.2",
    "ipykernel==6.29.5"
]

[project.urls]
"Homepage" = "https://github.com/rtengle/bisection-method"
"Bug Tracker" = "https://github.com/rtengle/bisection-method/issues"